<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--Generated by crowdin.net-->
<resources>
    <string name="about_application">About application</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="answer">Answer</string>
    <string name="author">Author</string>
    <string name="azimuth">Azimuth</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="declination">Declination</string>
    <string name="disable_location">Disable location</string>
    <string name="distance">Distance</string>
    <string name="do_you_really_want_to_delete_selected_items">Do you really want to delete selected items?</string>
    <string name="do_you_really_want_to_delete_x">Do you really want to delete \'%1$s\'?</string>
    <string name="do_you_really_want_to_exit">Do you really want to EXIT?</string>
    <string name="dont_ask">Don\'t ask</string>
    <string name="error">Error</string>
    <string name="failed">Failed</string>
    <string name="feet">Feet</string>
    <string name="filesystem_cannot_create_root">Cannot create Root directory, SDCard probably missing.\n\nInsert it into device and run again!</string>
    <string name="finished">Finished</string>
    <string name="gps">GPS</string>
    <string name="gps_and_location">GPS and location</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_fix">Last GPS fix</string>
    <string name="gps_not_enabled_show_system_settings">GPS not enabled. Do you want to show system settings?</string>
    <string name="gps_off">GPS Off</string>
    <string name="gps_on">GPS On</string>
    <string name="choose_cartridge">Choose Cartridge</string>
    <string name="info">Information</string>
    <string name="invalid_cartridge">Invalid cartridge\n\n %s</string>
    <string name="invalid_value">Invalid value</string>
    <string name="inventory">Inventory</string>
    <string name="latitude">Latitude</string>
    <string name="libraries">Libraries</string>
    <string name="locations">Locations</string>
    <string name="longitude">Longitude</string>
    <string name="map">Map</string>
    <string name="metres">Metres</string>
    <string name="new_version_will_be_installed">New version will be installed!</string>
    <string name="no">No</string>
    <string name="no_description">No description</string>
    <string name="no_location_providers_available">No Location providers available!</string>
    <string name="no_satellites">No satellites</string>
    <string name="no_target">No target!</string>
    <string name="no_wherigo_cartridge_available">No Wherigo cartridge available.\nAdd cartridge file (*.gwc) into\n %1$s directory\n and start %2$s again!</string>
    <string name="not_enough_disk_space_x">Not enough free disk space on SDCard!\n(%1$s, free:%2$s)</string>
    <string name="ok">OK</string>
    <string name="pending">Pending</string>
    <string name="pitch">Pitch</string>
    <string name="point">Point</string>
    <string name="positioning">Positioning</string>
    <string name="press_color_to_apply">Press color to apply</string>
    <string name="problem_with_internet_connection">Problem with Internet connection!</string>
    <string name="question">Question</string>
    <string name="resume_previous_cartridge">Resume previous cartridge?</string>
    <string name="roll">Roll</string>
    <string name="satellites">Satellites</string>
    <string name="save_game_before_exit">Save game before exit?</string>
    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="tasks">Tasks</string>
    <string name="time_to_target">Time to target</string>
    <string name="unexpected_problem">Unexpected problem!\n\nPlease contact me with description of your problem.</string>
    <string name="version">Version</string>
    <string name="waypoints">Waypoints</string>
    <string name="web_page">Web page</string>
    <string name="working">Working...</string>
    <string name="yes">Yes</string>
    <string name="you_have_to_exit_app_force">You have to exit application!</string>
    <string name="you_have_to_restart_app_force">You have to restart application!</string>
    <string name="you_have_to_restart_app_recommended">It\'s recommended to restart application!</string>
    <string name="you_see">You see</string>
    <string name="compass">Compass</string>
    <string name="navigate">Navigate</string>
    <string name="ctx_menu_send_game">Send game</string>
    <string name="ctx_menu_show_on_map">Show on map</string>
    <string name="ctx_menu_continue_game">Continue game</string>
    <string name="ctx_menu_restart_game">Restart game</string>
    <string name="ctx_menu_del_saved_game">Delete saved game</string>
    <string name="ctx_menu_play">Play</string>
    <string name="ctx_menu_delete_log_file">Delete log file</string>
    <string name="ctx_menu_send_log_file">Send log file</string> 
    <string name="err_none">OK</string>  
    <string name="save">Save</string>
    <string name="guidance_zone_entered">Zone entered</string>
    <string name="stop_navigate">Stop Guidance</string>
    <string name="double_hk_back_exit_app">Press BACK twice to exit Yaawp</string>
    <string name="double_hk_back_exit_guidance">Press BACK twice to stop navigation</string>
    <string name="double_hk_back_exit_game">Press BACK twice to leave the game</string>
    <string name="guidance_destination">Destination</string>
</resources>
